fixed dark mode button color

--- a/assets/css/nav-styles.css
+++ b/assets/css/nav-styles.css
@@ -24,6 +24,9 @@
 [data-theme='dark'] .navbar ul{
   background-color: #343a40;
 }
+[data-theme='dark'] .navbar button{
+  color: white;
+}
 /*Maneging navbar as per theme ends*/
 
 .navbar {
